<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="356dp"
    android:layout_height="260dp"
    android:background="@drawable/wrong3"
    android:orientation="vertical">

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"

        />



        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ds"
            android:text="@string/full"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginTop="15dp"
          />

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/ds"
        android:text="@string/choose_between"
        android:textColor="#FFFFFF"
        android:textSize="24sp"

        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shep_wight"
            android:fontFamily="@font/ds"
            android:padding="5dp"
            android:gravity="center"
            android:paddingEnd="55dp"
            android:paddingStart="55dp"
            android:text="@string/try_level2"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shep_wight2"
            android:fontFamily="@font/ds"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/pay_time2"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>