<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shepcolor"
    android:orientation="vertical"
    tools:context=".game.Ui.ActivityOneQuseion">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Layout_Tool_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/number_coin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/ds"
                android:text="@string/coin"
                android:textColor="@color/yallo"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/add_coins"
                app:layout_constraintTop_toTopOf="@id/Layout_Tool_bar" />

            <ImageView
                android:id="@+id/add_coins"
                android:layout_width="50dp"
                android:layout_height="50dp"

                android:src="@drawable/coin"
                app:layout_constraintBottom_toBottomOf="@id/Layout_Tool_bar"
                app:layout_constraintStart_toStartOf="@id/Layout_Tool_bar"
                app:layout_constraintTop_toTopOf="@id/Layout_Tool_bar" />


            <TextView
                android:id="@+id/back"
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/back"
                android:textAlignment="viewEnd"
                app:layout_constraintEnd_toEndOf="@id/Layout_Tool_bar"
                app:layout_constraintTop_toTopOf="@id/Layout_Tool_bar" />

            <TextView
                android:id="@+id/level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/ds"
                android:text="@string/level_nom"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/back"
                app:layout_constraintTop_toTopOf="@id/Layout_Tool_bar" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Layout_first"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"

            >

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Timer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/ds"
                    android:gravity="center"
                    android:text="@string/timer"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/btn_color_this"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/shep"

                    />

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">


                    <ImageView
                        android:id="@+id/help_1"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="120dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/tlmeh"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/text_fares"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ds"
                        android:text="@string/color_who_is"

                        android:textColor="@color/white"
                        android:textSize="24sp" />


                </LinearLayout>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"

                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:fontFamily="@font/ds"
                        android:gravity="center"
                        android:text="@string/info_color2"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:visibility="visible"

                        />


                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/boal1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/btn_color_1"

                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="100dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/shep"
                        app:layout_constraintBottom_toBottomOf="@id/boal1"
                        app:layout_constraintStart_toStartOf="@id/boal1"
                        app:layout_constraintTop_toTopOf="@id/boal1" />

                    <TextView
                        android:id="@+id/btn_color_2"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="100dp"
                        android:background="@drawable/shep"
                        app:layout_constraintBottom_toBottomOf="@id/boal1"
                        app:layout_constraintEnd_toEndOf="@id/boal1"

                        app:layout_constraintTop_toTopOf="@id/boal1" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"

                    >

                    <TextView
                        android:id="@+id/btn_color_3"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/shep"

                        />


                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/boal2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/btn_color_5"

                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="100dp"
                        android:background="@drawable/shep"
                        app:layout_constraintBottom_toBottomOf="@id/boal2"
                        app:layout_constraintStart_toStartOf="@id/boal2"
                        app:layout_constraintTop_toTopOf="@id/boal2" />

                    <TextView
                        android:id="@+id/btn_color_4"

                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="100dp"
                        android:background="@drawable/shep"
                        app:layout_constraintBottom_toBottomOf="@id/boal2"
                        app:layout_constraintEnd_toEndOf="@id/boal2"
                        app:layout_constraintTop_toTopOf="@id/boal2" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>



            <TextView
                android:id="@+id/increase10s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/wrong"
                android:gravity="center"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.gms.ads.AdView
                    xmlns:ads="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/adView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    ads:adSize="BANNER"

                    ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
                    ads:layout_constraintBottom_toBottomOf="parent"
                    ads:layout_constraintStart_toStartOf="parent"
                    ads:layout_constraintEnd_toEndOf="parent"

                    >
                </com.google.android.gms.ads.AdView>
            </androidx.constraintlayout.widget.ConstraintLayout>



        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>